# meeting_room_displays

./: .gitignore  20_DiplayDongleUDev.rules  LICENSE  README.md  west.yml
app/: .gitignore  CMakeLists.txt  Kconfig  Makefile  display.conf  prj.conf
app/server/: dongle.py  message.py  requirements.txt  server.py  tty.py
app/src/: display.c  display.h  gpio.c  gpio.h  images.h  main.c  mesh.c  mesh.h  message.h  power.c  power.h  serial.h
button_triggered_mesh/: CMakeLists.txt  display.conf  prj.conf
button_triggered_mesh/src/: board.c  board.h  display.c  display.h  gpio.c  gpio.h  main.c
doc/: consumption.py
meeting_room_display/: .gitignore  20_DiplayDongleUDev.rules  CMakeLists.txt  Makefile  debug.conf  display.conf  prj.conf  serial.conf
meeting_room_display/server/: cal.py  config.py.template  display.py  display_cluster.py  dongle.py  message.py  o365_calendar.py  server.py  tty.py
meeting_room_display/src/: display.c  display.h  gpio.c  gpio.h  images.h  main.c  mesh.c  mesh.h  message.h  power.c  power.h  serial.c  serial.h
server/: README.md  config.py.template  display.py  display_cluster.py  dongle.py  message.py  server.py  tty.py
